syntax = "proto3";

package rbac;

service RbacService {
  rpc CreateRole (CreateRoleRequest) returns (BaseRoleResponse);
  rpc UpdateRole (UpdateRoleRequest) returns (BaseRoleResponse);
  rpc CreatePermission (CreatePermissionRequest) returns (BasePermissionResponse);
  rpc AssignPermissionToRole (AssignPermissionToRoleRequest) returns (BasePermissionRoleResponse);
  rpc AssignRoleToUser (AssignRoleToUserRequest) returns (BaseUserRoleResponse);
  rpc GetUserRoles (GetUserRolesRequest) returns (BaseUserRolesResponse);
}

// Requests

message CreateRoleRequest {
  string name = 1;
  string description = 2;
}

message UpdateRoleRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message CreatePermissionRequest {
  string action = 1;
  string description = 2;
}

message AssignPermissionToRoleRequest {

  int32 roleId = 1;
  int32 permissionId = 2;

}


message AssignRoleToUserRequest {
  int32 userId = 1;
  int32 roleId = 2;
}

message GetUserRolesRequest {
  int32 userId = 1;
}

// Common Error Payload

message ErrorPayload {
  string message = 1;
  string code = 2;
  string details = 3;
}

// Base Response Wrappers

message BaseRoleResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  RoleResponse role = 4;
  ErrorPayload error = 5;
}


message BasePermissionResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  PermissionResponse descriptionAction = 4;
  ErrorPayload error = 5;
}

message BaseUserRoleResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  UserRoleResponse userRole = 4;
  ErrorPayload error = 5;
}

message BasePermissionRoleResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  PermissionRoleResponse permissionRole = 4;
  ErrorPayload error = 5;
}

message BaseUserRolesResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  repeated RoleResponse roles = 4;
  ErrorPayload error = 5;
}

// Entities
message RoleResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message PermissionResponse {
  int32 id = 1;
  string action = 2;
  string description = 3;
}

message UserRoleResponse {
  int32 id = 1;
  int32 userId = 2;
  int32 roleId = 3;
}

message PermissionRoleResponse {
  int32 id = 1;
  int32 roleId = 2;
  int32 permissionId = 3;
}
